<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailsScrollView" >

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true">

        <TextView
            android:text="@string/label_name"
            android:id="@+id/nameLabelTextView"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/ContactLabelTextView" />

        <TextView
            android:text="@string/label_phone"
            android:id="@+id/phoneLabelTextView"
            android:layout_column="0"
            android:layout_row="1"
            style="@style/ContactLabelTextView" />

        <TextView
            android:text="@string/label_email"
            android:id="@+id/emailLabelTextView"
            android:layout_column="0"
            android:layout_row="2"
            style="@style/ContactLabelTextView" />

        <TextView
            android:layout_width="241dp"
            android:id="@+id/nameTextView"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/ContactTextView" />

        <TextView
            style="@style/ContactTextView"
            android:layout_width="295dp"
            android:id="@+id/phoneTextView"
            android:layout_column="1"
            android:layout_row="1" />

        <TextView
            style="@style/ContactTextView"
            android:layout_width="295dp"
            android:id="@+id/emailTextView"
            android:layout_column="1"
            android:layout_row="2" />

        <Button
            android:text="@string/button_back"
            android:id="@+id/backButton"
            android:layout_gravity="center_horizontal" />
    </GridLayout>
</ScrollView>

    <!--</FrameLayout>-->
